--- a/package.xml
+++ b/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>linefollowertest</name>
+  <name>final_pkg</name>
   <version>0.0.0</version>
-  <description>The Linefollower package</description>
+  <description>The final package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
